Auto-commit: 2026-01-01 20:53:48